fix collapse transition in navbar. add navbar-nav-collapse class

--- a/styles/scss/_lnet-navbar.scss
+++ b/styles/scss/_lnet-navbar.scss
@@ -283,27 +283,23 @@ a:hover{
   }
 
   //top navigation absolute positioning
+  .navbar-nav-collapse{
+    position: absolute;
+    width:100%;
+  }
+  //need the dropdown content 13rem to avoid gaps
   .collapse {
-    display: none;
     &.show {
       & .bg-dark{
-        position:absolute;
-        width:100%;
         height:13rem;
-        // display: block;
       }
     }
   }
-  //using absolute positioning during transition. 
-  //If you need relative positioning (ex: more/fewer links)
-  //add the position-relative class to the collapse class
+  
+  //need the dropdown content 13rem during transition to avoid jumps
   .collapsing {
-    position: absolute;
-    width:100%;
     & .bg-dark{      
       height: 13rem;      
-      overflow: hidden;
-      @include transition($transition-collapse);
     }
   }
 
